load("@rules_java//java:defs.bzl", "java_import")

package(default_visibility = ["//visibility:public"])


java_import(
    name = "org_reflections_reflections",
    jars = glob(["target/reflections-*-SNAPSHOT.jar"], allow_empty=False),
    srcjar = glob(["target/reflections-*-SNAPSHOT-sources.jar"], allow_empty=False)[0],
)
