load("@rules_java//java:defs.bzl", "java_import")

package(default_visibility = ["//visibility:public"])


java_import(
    name = "org_reflections_reflections",
    jars = glob(["target/reflections-0.9.11.jar"], allow_empty=False),
    srcjar = glob(["target/reflections-*-sources.jar"], allow_empty=False)[0],
)
